force-app/main/default/objects/z_FieldDescription__c/z_FieldDescription__c.object-meta.xml
<CustomObject>
    <description>Created by the Metadata API</description>
    <label>SObjectField</label>
    <nameField>
        <label>SObjectField Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>