force-app/main/default/objects/z_FieldDescription__c/fields/byteLength__c.field-meta.xml
<CustomField>
    <fullName>byteLength__c</fullName>
    <label>byteLength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>