force-app/main/default/objects/z_FieldDescription__c/fields/calculatedFormula__c.field-meta.xml
<CustomField>
    <fullName>calculatedFormula__c</fullName>
    <label>calculatedFormula</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>