force-app/main/default/objects/z_FieldDescription__c/fields/defaultValueFormula__c.field-meta.xml
<CustomField>
    <fullName>defaultValueFormula__c</fullName>
    <label>defaultValueFormula</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>