force-app/main/default/objects/z_FieldDescription__c/fields/digits__c.field-meta.xml
<CustomField>
    <fullName>digits__c</fullName>
    <label>digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>