force-app/main/default/objects/z_FieldDescription__c/fields/inlineHelpText__c.field-meta.xml
<CustomField>
    <fullName>inlineHelpText__c</fullName>
    <label>inlineHelpText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>