force-app/main/default/objects/z_FieldDescription__c/fields/isAutoNumer__c.field-meta.xml
<CustomField>
    <fullName>isAutoNumer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAutoNumer</label>
    <type>Checkbox</type>
</CustomField>