force-app/main/default/objects/z_FieldDescription__c/fields/isCalculated__c.field-meta.xml
<CustomField>
    <fullName>isCalculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCalculated</label>
    <type>Checkbox</type>
</CustomField>