force-app/main/default/objects/z_FieldDescription__c/fields/isCaseSensitive__c.field-meta.xml
<CustomField>
    <fullName>isCaseSensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCaseSensitive</label>
    <type>Checkbox</type>
</CustomField>