force-app/main/default/objects/z_FieldDescription__c/fields/isDependentPicklist__c.field-meta.xml
<CustomField>
    <fullName>isDependentPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDependentPicklist</label>
    <type>Checkbox</type>
</CustomField>