force-app/main/default/objects/z_FieldDescription__c/fields/isExternalID__c.field-meta.xml
<CustomField>
    <fullName>isExternalID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isExternalID</label>
    <type>Checkbox</type>
</CustomField>