force-app/main/default/objects/z_FieldDescription__c/fields/isGroupable__c.field-meta.xml
<CustomField>
    <fullName>isGroupable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGroupable</label>
    <type>Checkbox</type>
</CustomField>