force-app/main/default/objects/z_FieldDescription__c/fields/isHtmlFormatted__c.field-meta.xml
<CustomField>
    <fullName>isHtmlFormatted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHtmlFormatted</label>
    <type>Checkbox</type>
</CustomField>