force-app/main/default/objects/z_FieldDescription__c/fields/isNameField__c.field-meta.xml
<CustomField>
    <fullName>isNameField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isNameField</label>
    <type>Checkbox</type>
</CustomField>