force-app/main/default/objects/z_FieldDescription__c/fields/isNillable__c.field-meta.xml
<CustomField>
    <fullName>isNillable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isNillable</label>
    <type>Checkbox</type>
</CustomField>