force-app/main/default/objects/z_FieldDescription__c/fields/IsRequiredOnNew__c.field-meta.xml
<CustomField>
    <fullName>IsRequiredOnNew__c</fullName>
    <formula>IF( isNillable__c = False &amp;&amp; isDefaultedOnCreate__c = False, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsRequiredOnNew</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>