force-app/main/default/objects/z_FieldDescription__c/fields/isUnique__c.field-meta.xml
<CustomField>
    <fullName>isUnique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUnique</label>
    <type>Checkbox</type>
</CustomField>