force-app/main/default/objects/z_FieldDescription__c/fields/isWriteRequiredMasterRead__c.field-meta.xml
<CustomField>
    <fullName>isWriteRequiredMasterRead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWriteRequiredMasterRead</label>
    <type>Checkbox</type>
</CustomField>