force-app/main/default/objects/z_FieldDescription__c/fields/localName__c.field-meta.xml
<CustomField>
    <fullName>localName__c</fullName>
    <label>localName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>