force-app/main/default/objects/z_FieldDescription__c/fields/picklistentries__c.field-meta.xml
<CustomField>
    <fullName>picklistentries__c</fullName>
    <label>picklistentries</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>