force-app/main/default/objects/z_FieldDescription__c/fields/precision__c.field-meta.xml
<CustomField>
    <fullName>precision__c</fullName>
    <label>precision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>