force-app/main/default/objects/z_FieldDescription__c/fields/relationshipName__c.field-meta.xml
<CustomField>
    <fullName>relationshipName__c</fullName>
    <label>relationshipName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>