force-app/main/default/objects/z_FieldDescription__c/fields/relationshipOrder__c.field-meta.xml
<CustomField>
    <fullName>relationshipOrder__c</fullName>
    <label>relationshipOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>