force-app/main/default/objects/z_FieldDescription__c/fields/scale__c.field-meta.xml
<CustomField>
    <fullName>scale__c</fullName>
    <label>scale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>