force-app/main/default/objects/z_FieldDescription__c/fields/soaptype__c.field-meta.xml
<CustomField>
    <fullName>soaptype__c</fullName>
    <label>soptype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>