force-app/main/default/objects/z_FieldDescription__c/fields/z_SObjectDescription__c.field-meta.xml
<CustomField>
    <fullName>z_SObjectDescription__c</fullName>
    <label>z_SObjectDescription</label>
    <referenceTo>z_SObjectDescription__c</referenceTo>
    <relationshipName>z_FieldDescription</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>